<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="200dp"
    android:background="@drawable/round_rec_purple"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingBottom="25dp">

    <TextView
        android:id="@+id/forgotPasswordHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/forgot_password_dialog_headline"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_password_dialog_text"
        android:textColor="@color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPasswordEmail"
        android:hint="@string/forgot_password_dialog_email_edittext"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white">
    </EditText>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="9dp">

        <Button
            android:id="@+id/forgot_password_dialog_btn_cancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/round_rec_pink"
            android:clickable="true"
            android:text="@string/btn_cancel"
            android:textStyle="bold"
            android:layout_marginRight="15dp"/>
        <Button
            android:id="@+id/forgot_password_dialog_btn_send"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/round_rec_pink"
            android:clickable="true"
            android:text="@string/btn_save"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>