<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="160dp"
    android:background="@drawable/round_rec_purple"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingBottom="25dp">

    <TextView
        android:id="@+id/add_user_to_sharing_list_dialog_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/user_sharing_list_dialog_head"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_user_to_sharing_list_dialog_edittext"
        android:hint="@string/user_sharing_list_dialog_edittext_token"
        android:textColor="@color/white"
        android:textColorHint="@color/white">
    </EditText>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="9dp">

        <Button
            android:id="@+id/add_user_to_sharing_list_dialog_btn_cancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/round_rec_pink"
            android:clickable="true"
            android:text="@string/btn_cancel"
            android:textStyle="bold"
            android:layout_marginRight="15dp"/>
        <Button
            android:id="@+id/add_user_to_sharing_list_dialog_btn_save"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/round_rec_pink"
            android:clickable="true"
            android:text="@string/btn_save"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>