<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">
    <TextView
        android:id="@+id/add_category_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_rec_pink"
        android:text="@string/add_category_button"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
    </TextView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/storageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_header"
        android:padding="15dp"
        android:layout_marginTop="30dp">
    </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="60dp">
        <TextView
            android:id="@+id/emailVerificationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_email_text">
        </TextView>
        <Button
            android:id="@+id/validateEmailButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_bkg"
            android:text="@string/verify_email_button"
            android:layout_marginTop="20dp">
        </Button>
        <TextView
            android:id="@+id/emailVerificationText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_email_text2"
            android:layout_marginTop="15dp">
        </TextView>
    </LinearLayout>
</FrameLayout>