<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:background="@drawable/round_rec_purple"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingBottom="25dp">

    <TextView
        android:id="@+id/category_dialog_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/add_category_alert_head"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/category_name_edit"
        android:hint="@string/add_category_edittext_hint"
        android:textColor="@color/white"
        android:maxLength="20"
        android:textColorHint="@color/white">
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="pick color: "
            android:textColor="@color/white">
        </TextView>

        <FrameLayout
            android:id="@+id/color_picker_container"
            android:layout_width="25dp"
            android:layout_height="25dp">

            <Button
                android:id="@+id/choose_color_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cards_pink">
            </Button>
        </FrameLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="9dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/round_rec_pink"
            android:clickable="true"
            android:text="@string/btn_cancel"
            android:textStyle="bold"
            android:layout_marginRight="15dp"/>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/round_rec_pink"
            android:clickable="true"
            android:text="@string/btn_save"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>