<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="130dp"
    android:background="@drawable/round_rec_purple"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingBottom="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/confirm_delete_dialog_head"
        android:textColor="@android:color/white"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/confirm_delete_dialog_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="name"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="9dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/confirm_delete_dialog_header_btn_cancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/round_rec_pink"
            android:clickable="true"
            android:text="@string/confirm_delete_dialog_cancel_btn"
            android:textStyle="bold"
            android:layout_marginRight="15dp"/>
        <Button
            android:id="@+id/confirm_delete_dialog_header_btn_save"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/round_rec_pink"
            android:clickable="true"
            android:text="@string/confirm_delete_dialog_remove_btn"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>